# RAG-llama

./: .gitignore  README.md  dev-agents.Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
api/: Dockerfile  index.html  main.py  rag.py  requirements.txt  uploadForm.html
data/anythingllm/: anythingllm.db
data/anythingllm/comkey/: ipc-priv.pem  ipc-pub.pem
data/anythingllm/models/context-windows/: .cached_at  context-windows.json
mlflow/: Dockerfile  config_tracking.py
mlflow/mlruns/0/: meta.yaml
src/ollama/: agent.py  client.py
